# sentry-devtools

./: .actrc  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  install-devtools.sh  pyproject.toml  requirements-dev.in  setup.cfg  tox.ini
.github/workflows/: bootstrap.yml  build.yml  integration.yml  main.yml
devenv/: config.ini  sync.py
devtools/: __main__.py  constants.py  main.py
devtools/commands/: config.py  gcloud.py  github.py  meta.py  repo.py
devtools/commands/resources/gcloud/: scopes.csv
devtools/commands/resources/meta/: command.jinja  mkpipe_script.jinja  module.jinja
devtools/commands/resources/repo/: mkscript_script.jinja
devtools/internal/: colors.py  logsetup.py  parsehelp.py
devtools/lib/: archive.py  ask.py  config.py  context.py  fs.py  gcptools.py  jinja.py  modules.py  proc.py  repository.py  text.py
sentry_devtools/: __main__.py  main.py
tests/: main_test.py  test_config.py  test_parsehelp.py
tests/lib/: test_archive.py  test_fs.py  test_proc.py
