[metadata]
name = sentry_devtools
version = 0.0.0
description = distributable developer tools for streamlining sentry development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getsentry/sentry-devtools
author = Anthony Sottile
author_email = anthony.sottile@sentry.io
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pip-tools>=6.6.2
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    sentry-devtools = sentry_devtools.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
extend-ignore = E203,E501

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
